src/test/ui/macros/macro-non-lifetime.stderr
error: no rules expected the token `a`
  --> $DIR/macro-non-lifetime.rs:8:8
   |
LL |     m!(a);
   |        ^

error: aborting due to previous error

